# rust-core-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml  sonar-project.properties
.cargo/: config.toml
.github/workflows/: pipeline.yml
migrations/2026-05-31-155048-0000_create_initial_tables/: down.sql  up.sql
migrations/2026-05-31-155653-0000_seed_initial_data/: down.sql  up.sql
migrations/2026-06-04-162628-0000_create_property_tables/: down.sql  up.sql
migrations/2026-06-08-134829-0000_create_work_logs_tables/: down.sql  up.sql
script/: audit.txt  diesel.txt  format.txt  linter.txt  test.txt
src/: docs.rs  main.rs  schema.rs
src/config/: database.rs
src/core/: errors.rs  extractors.rs  jwt.rs  middleware.rs  mod.rs  response.rs  security.rs
src/modules/: mod.rs
src/modules/auth/: dtos.rs  handlers.rs  mod.rs  repositories.rs  routes.rs  services.rs
src/modules/health/: dtos.rs  handlers.rs  mod.rs  repositories.rs  services.rs
src/modules/properties/: dtos.rs  handlers.rs  mod.rs  models.rs  repositories.rs  routes.rs  services.rs
src/modules/roles/: dtos.rs  handlers.rs  mod.rs  models.rs  repositories.rs  routes.rs  services.rs
src/modules/users/: dtos.rs  handlers.rs  mod.rs  models.rs  repositories.rs  routes.rs  services.rs
src/modules/work_logs/: dtos.rs  handlers.rs  models.rs  repositories.rs  routes.rs  services.rs
